--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,8 @@
    "outputs": [],
    "source": [
     "travel_month # \"January\"\n",
-    "travel_month = \"January\""
+    "travel_month = \"January\"\n",
+    "travel_"
    ]
   },
   {
