--- a/index.ipynb
+++ b/index.ipynb
@@ -108,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks # 3\n",
-    "number_of_weeks "
+    "number_of_weeks = 3"
    ]
   },
   {
