--- a/index.ipynb
+++ b/index.ipynb
@@ -108,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks # 3\n",
     "number_of_weeks = 3\n",
-    "number_of"
+    "number_of_weeks"
    ]
   },
   {
