--- a/index.ipynb
+++ b/index.ipynb
@@ -137,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks=5"
+    "number_of_weeks=5\n"
    ]
   },
   {
